Windows Library, Python Interpreter
Added a Jython interpreter for instrument profiles for instrument-specific events such as chords, a dedicated folder for libraries to be used in the JAR executable, and other enhancements.